[package]
name = "upsideos-solana-rwa-client"
version = "0.2.0"
description = "Codama-generated Rust client for Upside OS Solana RWA programs"
edition = "2021"
license = "MIT"
repository = "https://github.com/upsideos/upsideos-solana-rwa"
keywords = ["solana", "rwa", "security-token", "blockchain"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
borsh = ">=0.10,<2"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "^2.1"
thiserror = "^2.0"

[dev-dependencies]
assert_matches = "1.5.0"

