[package]
name = "upsideos-solana-rwa-client"
version = "0.2.0"
description = "A generated Rust client for Upside OS Solana RWA programs"
edition = "2021"
license = "MIT"
repository = "https://github.com/upsideos/upsideos-solana-rwa"
keywords = ["solana", "rwa", "security-token", "blockchain"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
# Optional features for generated code
serde = ["dep:serde", "dep:serde_with"]
fetch = []
anchor = ["dep:anchor-lang"]
anchor-idl-build = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("serde", "fetch", "anchor", "anchor-idl-build"))'] }

[dependencies]
borsh = ">=0.10,<2"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "^2.1"
solana-account-info = "^2.1"
solana-cpi = "^2.1"
solana-instruction = "^2.1"
solana-program-error = "^2.1"
solana-pubkey = "^2.1"
thiserror = "^2.0"
# Optional dependencies for feature flags
serde = { version = "^1.0", optional = true }
serde_with = { version = "^3.0", optional = true }
anchor-lang = { version = "^0.30", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"

