[package]
name = "access-control"
version = "0.2.0"
description = "Access Control for Solana Programs"
edition = "2021"
license = "MIT"
authors = ["CoMakery, Inc. dba Upside"]
repository = "https://github.com/upsideos/upsideos-solana-rwa"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_control"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
num_enum = "0.7.2"
tokenlock-accounts = { path = "../../libraries/tokenlock-accounts" }
