[package]
name = "dividends"
version = "0.2.0"
description = "Dividends are based on Merkle tree distribution"
edition = "2021"
license = "MIT"
authors = ["CoMakery, Inc. dba Upside"]
repository = "https://github.com/upsideos/upsideos-solana-rwa"

[lib]
crate-type = ["cdylib", "lib"]
name = "dividends"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
access-control = { path = "../access-control", features = ["cpi"] }
solana-keccak-hasher = "3.0.0"
