[package]
name = "tokenlock"
version = "0.2.0"
description = "Vesting lockups for SPL tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenlock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
hex = "0.4.3"
sha2 = "0.10.2"
tokenlock-accounts = { path = "../../libraries/tokenlock-accounts" }
access-control = { path = "../access-control", features = ["cpi"] }
transfer-restrictions = { path = "../transfer-restrictions", features = ["cpi"] }

[dev-dependencies]
spl-token-2022 = {version = "8.0.1", features = ["no-entrypoint"]}
solana-sdk = "2.3.1"
solana-program-test = "2.3.13"
solana-program = "2.3.0"
