[package]
name = "transfer-restrictions"
version = "0.1.0"
description = "Transfer restrictions for Solana tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_restrictions"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { version = "0.32.1" }
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
num_enum = "0.7.5"
access-control = { path = "../access-control", features = ["cpi"] }
tokenlock-accounts = { path = "../../libraries/tokenlock-accounts" }
